--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "dev": "vite"
   },
   "devDependencies": {
-    "vite": "^7.1.2"
+    "vite": "^7.1.3"
   },
   "dependencies": {
     "@codemirror/commands": "^6.8.1",
@@ -11,8 +11,10 @@
     "@codemirror/language": "^6.11.3",
     "@codemirror/language-data": "^6.5.1",
     "@codemirror/state": "^6.5.2",
-    "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.1",
+    "@observablehq/notebook-kit": "^1.0.1",
+    "@observablehq/runtime": "^6.0.0",
+    "charmingjs": "^0.0.19",
     "codemirror": "^6.0.2"
   }
 }
