--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dev": "vite"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.1",
     "vite": "^7.1.3"
   },
   "dependencies": {
@@ -16,8 +17,9 @@
     "@observablehq/runtime": "^6.0.0",
     "acorn": "^8.15.0",
     "acorn-walk": "^8.3.4",
-    "charmingjs": "^0.0.19",
     "codemirror": "^6.0.2",
-    "d3-array": "^3.2.4"
+    "d3-array": "^3.2.4",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
