--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "acorn-walk": "^8.3.4",
     "codemirror": "^6.0.2",
     "d3-array": "^3.2.4",
+    "object-inspect": "^1.13.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   }
