--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "acorn": "^8.15.0",
     "codemirror": "^6.0.2",
     "d3-array": "^3.2.4",
+    "d3-dispatch": "^3.0.1",
     "d3-require": "^1.3.0",
     "object-inspect": "^1.13.4",
     "react": "^19.1.1",
