--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "app:dev": "next dev",
+    "app:build": "next build",
+    "app:start": "next start",
+    "app:lint": "eslint"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.1",
@@ -21,6 +24,7 @@
     "d3-array": "^3.2.4",
     "d3-dispatch": "^3.0.1",
     "d3-require": "^1.3.0",
+    "next": "^15.5.0",
     "object-inspect": "^1.13.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
