--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "scripts": {
+    "vercel-build": "next build",
     "dev": "vite",
     "app:dev": "next dev",
     "app:build": "next build",
+    "app:build-cloudflare": "npx @cloudflare/next-on-pages",
     "app:start": "next start",
     "test": "npm run test:lint && npm run test:format",
     "test:format": "prettier --check src test app",
     "test:lint": "eslint"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.14",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
@@ -24,16 +27,18 @@
     "@codemirror/language-data": "^6.5.1",
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.38.1",
-    "@observablehq/notebook-kit": "^1.0.1",
+    "@observablehq/notebook-kit": "^1.1.0",
     "@observablehq/runtime": "^6.0.0",
     "acorn": "^8.15.0",
     "codemirror": "^6.0.2",
     "d3-array": "^3.2.4",
     "d3-dispatch": "^3.0.1",
     "d3-require": "^1.3.0",
-    "next": "^15.5.0",
+    "friendly-words": "^1.3.1",
+    "next": "^15.5.2",
     "object-inspect": "^1.13.4",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "short-uuid": "^5.2.0"
   }
 }
