--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.15",
+    "@tailwindcss/postcss": "^4.1.12",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.12",
     "vite": "^7.1.3"
   },
   "dependencies": {
