--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.15",
     "@tailwindcss/postcss": "^4.1.12",
+    "clsx": "^2.1.1",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
+    "lucide-react": "^0.542.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "react-tooltip": "^5.29.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "vite": "^7.1.3"
   },
