--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vite": "^7.1.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.3",
     "@codemirror/commands": "^6.8.1",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/language": "^6.11.3",
@@ -36,6 +37,7 @@
     "@codemirror/view": "^6.38.1",
     "@observablehq/notebook-kit": "^1.2.0",
     "@observablehq/runtime": "^6.0.0",
+    "@uiw/codemirror-theme-github": "^4.25.1",
     "acorn": "^8.15.0",
     "codemirror": "^6.0.2",
     "d3-array": "^3.2.4",
