--- a/package.json
+++ b/package.json
@@ -12,15 +12,23 @@
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.15",
+    "@tailwindcss/postcss": "^4.1.12",
+    "clsx": "^2.1.1",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
+    "lucide-react": "^0.542.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "react-tooltip": "^5.29.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12",
     "vite": "^7.1.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.3",
     "@codemirror/commands": "^6.8.1",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/language": "^6.11.3",
@@ -29,7 +37,9 @@
     "@codemirror/view": "^6.38.1",
     "@observablehq/notebook-kit": "^1.2.0",
     "@observablehq/runtime": "^6.0.0",
+    "@uiw/codemirror-theme-github": "^4.25.1",
     "acorn": "^8.15.0",
+    "cheerio": "^1.1.2",
     "codemirror": "^6.0.2",
     "d3-array": "^3.2.4",
     "d3-dispatch": "^3.0.1",
@@ -39,6 +49,7 @@
     "object-inspect": "^1.13.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "shiki": "^3.12.0",
     "short-uuid": "^5.2.0"
   }
 }
