--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@codemirror/language-data": "^6.5.1",
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.38.1",
+    "@fontsource-variable/inter": "^5.2.6",
+    "@fontsource-variable/spline-sans-mono": "^5.2.6",
     "@observablehq/notebook-kit": "^1.2.0",
     "@observablehq/runtime": "^6.0.0",
     "@uiw/codemirror-theme-github": "^4.25.1",
