--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "app:build": "next build",
     "app:build-cloudflare": "npx @cloudflare/next-on-pages",
     "app:start": "next start",
-    "test": "npm run test:lint && npm run test:format",
+    "test": "npm run test:js && npm run test:lint && npm run test:format",
+    "test:js": "vitest",
     "test:format": "prettier --check editor runtime test app",
     "test:lint": "eslint"
   },
@@ -25,7 +26,8 @@
     "react-tooltip": "^5.29.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@babel/runtime": "^7.28.3",
