--- a/package.json
+++ b/package.json
@@ -7,43 +7,43 @@
     "app:build-cloudflare": "npx @cloudflare/next-on-pages",
     "app:start": "next start",
     "test": "npm run test:js && npm run test:lint && npm run test:format",
-    "test:js": "vitest",
+    "test:js": "TZ=America/New_York vitest",
     "test:format": "prettier --check editor runtime test app",
     "test:lint": "eslint"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.15",
-    "@tailwindcss/postcss": "^4.1.12",
+    "@cloudflare/next-on-pages": "^1.13.16",
+    "@tailwindcss/postcss": "^4.1.13",
     "clsx": "^2.1.1",
-    "eslint": "^9.34.0",
+    "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.3.0",
+    "globals": "^16.4.0",
     "lucide-react": "^0.542.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "react-tooltip": "^5.29.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12",
-    "vite": "^7.1.3",
+    "tailwindcss": "^4.1.13",
+    "vite": "^7.1.7",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@babel/runtime": "^7.28.3",
-    "@codemirror/autocomplete": "^6.18.6",
+    "@babel/runtime": "^7.28.4",
+    "@codemirror/autocomplete": "^6.18.7",
     "@codemirror/commands": "^6.8.1",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/language": "^6.11.3",
     "@codemirror/language-data": "^6.5.1",
     "@codemirror/state": "^6.5.2",
-    "@codemirror/view": "^6.38.1",
-    "@fontsource-variable/inter": "^5.2.6",
-    "@fontsource-variable/spline-sans-mono": "^5.2.6",
+    "@codemirror/view": "^6.38.3",
+    "@fontsource-variable/inter": "^5.2.8",
+    "@fontsource-variable/spline-sans-mono": "^5.2.8",
     "@lezer/highlight": "^1.2.1",
-    "@observablehq/notebook-kit": "^1.2.0",
+    "@observablehq/notebook-kit": "^1.4.1",
     "@observablehq/runtime": "^6.0.0",
-    "@uiw/codemirror-theme-github": "^4.25.1",
+    "@uiw/codemirror-theme-github": "^4.25.2",
     "acorn": "^8.15.0",
     "cheerio": "^1.1.2",
     "codemirror": "^6.0.2",
@@ -51,11 +51,11 @@
     "d3-dispatch": "^3.0.1",
     "d3-require": "^1.3.0",
     "friendly-words": "^1.3.1",
-    "next": "^15.5.2",
+    "next": "^15.5.3",
     "object-inspect": "^1.13.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "shiki": "^3.12.0",
+    "shiki": "^3.13.0",
     "short-uuid": "^5.2.0"
   }
 }
