--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "shiki": "^3.13.0",
-    "short-uuid": "^5.2.0"
+    "short-uuid": "^5.2.0",
+    "source-map-support": "^0.5.21"
   }
 }
