Fix saving fail to auto run

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "app:build": "next build",
     "app:build-cloudflare": "npx @cloudflare/next-on-pages",
     "app:start": "next start",
-    "test": "npm run test:js && npm run test:lint && npm run test:format",
+    "test": "npm run test:lint && npm run test:format && npm run test:js",
     "test:js": "TZ=America/New_York vitest",
     "test:format": "prettier --check editor runtime test app",
     "test:lint": "eslint"
