--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "d3-require": "^1.3.0",
     "friendly-words": "^1.3.1",
     "next": "^15.5.3",
+    "nstr": "^0.1.3",
     "object-inspect": "^1.13.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
