--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/language": "^6.11.3",
     "@codemirror/language-data": "^6.5.1",
+    "@codemirror/lint": "^6.9.0",
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.38.3",
     "@fontsource-variable/inter": "^5.2.8",
@@ -50,6 +51,7 @@
     "d3-array": "^3.2.4",
     "d3-dispatch": "^3.0.1",
     "d3-require": "^1.3.0",
+    "eslint-linter-browserify": "^9.37.0",
     "friendly-words": "^1.3.1",
     "next": "^15.5.3",
     "nstr": "^0.1.3",
