--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "type": "module",
   "scripts": {
-    "vercel-build": "next build",
-    "dev": "vite",
-    "app:dev": "next dev",
-    "app:build": "next build",
-    "app:build-cloudflare": "npx @cloudflare/next-on-pages",
-    "app:start": "next start",
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build",
+    "test:dev": "vite",
     "test": "npm run test:lint && npm run test:format && npm run test:js",
     "test:js": "TZ=America/New_York vitest",
     "test:format": "prettier --check editor runtime test app",
-    "test:lint": "eslint"
+    "test:lint": "eslint",
+    "app:build-cloudflare": "opennextjs-cloudflare build",
+    "cloudflare:preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "cloudflare:deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "cloudflare:upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
+    "cloudflare:typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.16",
-    "@tailwindcss/postcss": "^4.1.13",
+    "@opennextjs/cloudflare": "^1.11.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "clsx": "^2.1.1",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -24,22 +27,23 @@
     "lucide-react": "^0.542.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "react-tooltip": "^5.29.1",
+    "react-tooltip": "^5.30.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13",
-    "vite": "^7.1.7",
-    "vitest": "^3.2.4"
+    "tailwindcss": "^4.1.14",
+    "vite": "^7.1.10",
+    "vitest": "^3.2.4",
+    "wrangler": "^4.43.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
-    "@codemirror/autocomplete": "^6.18.7",
-    "@codemirror/commands": "^6.8.1",
+    "@codemirror/autocomplete": "^6.19.0",
+    "@codemirror/commands": "^6.9.0",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/language": "^6.11.3",
     "@codemirror/language-data": "^6.5.1",
     "@codemirror/lint": "^6.9.0",
     "@codemirror/state": "^6.5.2",
-    "@codemirror/view": "^6.38.3",
+    "@codemirror/view": "^6.38.6",
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/spline-sans-mono": "^5.2.8",
     "@lezer/highlight": "^1.2.1",
@@ -54,11 +58,11 @@
     "d3-require": "^1.3.0",
     "eslint-linter-browserify": "^9.37.0",
     "friendly-words": "^1.3.1",
-    "next": "^15.5.3",
+    "next": "^15.5.5",
     "nstr": "^0.1.3",
     "object-inspect": "^1.13.4",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "shiki": "^3.13.0",
     "short-uuid": "^5.2.0",
     "source-map-support": "^0.5.21"
