--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -12,7 +12,7 @@
     "global_fetch_strictly_public"
   ],
   "assets": {
-    "directory": ".open-next/assets",
+    "directory": ".open-next/assets/notebook",
     "binding": "ASSETS"
   },
   "services": [
