--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
+  "type": "module",
   "scripts": {
-    "vercel-build": "next build",
     "dev": "vite",
     "app:dev": "next dev",
     "app:build": "next build",
-    "app:build-cloudflare": "npx @cloudflare/next-on-pages",
     "app:start": "next start",
     "test": "npm run test:lint && npm run test:format && npm run test:js",
     "test:js": "TZ=America/New_York vitest",
@@ -12,10 +11,9 @@
     "test:lint": "eslint"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.16",
-    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/postcss": "^4.1.14",
     "clsx": "^2.1.1",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -23,25 +21,25 @@
     "lucide-react": "^0.542.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "react-tooltip": "^5.29.1",
+    "react-tooltip": "^5.30.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13",
-    "vite": "^7.1.7",
+    "tailwindcss": "^4.1.14",
+    "vite": "^7.1.10",
     "vitest": "^3.2.4"
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
-    "@codemirror/autocomplete": "^6.18.7",
-    "@codemirror/commands": "^6.8.1",
+    "@codemirror/autocomplete": "^6.19.0",
+    "@codemirror/commands": "^6.9.0",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/language": "^6.11.3",
     "@codemirror/language-data": "^6.5.1",
     "@codemirror/lint": "^6.9.0",
     "@codemirror/state": "^6.5.2",
-    "@codemirror/view": "^6.38.3",
+    "@codemirror/view": "^6.38.6",
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/spline-sans-mono": "^5.2.8",
-    "@lezer/highlight": "^1.2.1",
+    "@lezer/highlight": "^1.2.2",
     "@observablehq/notebook-kit": "^1.4.1",
     "@observablehq/runtime": "^6.0.0",
     "@uiw/codemirror-theme-github": "^4.25.2",
@@ -53,11 +51,11 @@
     "d3-require": "^1.3.0",
     "eslint-linter-browserify": "^9.37.0",
     "friendly-words": "^1.3.1",
-    "next": "^15.5.3",
+    "next": "^15.5.6",
     "nstr": "^0.1.3",
     "object-inspect": "^1.13.4",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "shiki": "^3.13.0",
     "short-uuid": "^5.2.0",
     "source-map-support": "^0.5.21"
