--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-dom": "^19.2.0",
     "shiki": "^3.13.0",
     "short-uuid": "^5.2.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "table": "^6.9.0"
   }
 }
