--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
+    "@vitejs/plugin-react": "^4.3.1",
     "clsx": "^2.1.1",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
@@ -77,6 +78,7 @@
     "d3-require": "^1.3.0",
     "eslint-linter-browserify": "^9.37.0",
     "friendly-words": "^1.3.1",
+    "jotai": "^2.10.3",
     "next": "^15.5.6",
     "nstr": "^0.1.3",
     "object-inspect": "^1.13.4",
