--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
