--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-tooltip": "^5.30.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
+    "typescript": "^5.9.3",
     "vite": "^7.1.10",
     "vitest": "^3.2.4"
   },
