--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
+    "@types/node": "24.10.1",
+    "@types/react": "19.2.6",
     "@vitejs/plugin-react": "^4.3.1",
     "clsx": "^2.1.1",
     "eslint": "^9.37.0",
