--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/spline-sans-mono": "^5.2.8",
     "@lezer/highlight": "^1.2.2",
+    "@lezer/javascript": "^1.5.4",
     "@observablehq/notebook-kit": "^1.4.1",
     "@observablehq/runtime": "^6.0.0",
     "@uiw/codemirror-theme-github": "^4.25.2",
