--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "lucide-react": "^0.542.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "react-inspector": "^9.0.0",
+    "react-resizable-panels": "^3.0.6",
     "react-tooltip": "^5.30.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
