--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "24.10.1",
     "@types/react": "19.2.6",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
     "@vercel/analytics": "^1.5.0",
     "@vitejs/plugin-react": "^4.3.1",
     "clsx": "^2.1.1",
@@ -56,6 +58,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.49.0",
     "vite": "^7.1.10",
     "vitest": "^3.2.4"
   },
