--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "24.10.1",
     "@types/react": "19.2.6",
+    "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@typescript-eslint/parser": "^8.49.0",
     "@vercel/analytics": "^1.6.1",
