--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.5.0",
+    "immutable": "^5.1.4",
     "lucide-react": "^0.542.0",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
