--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "eslint-linter-browserify": "^9.39.1",
     "friendly-words": "^1.3.1",
     "jotai": "^2.10.3",
+    "nanoid": "^5.1.6",
     "next": "^15.5.7",
     "nstr": "^0.1.3",
     "object-inspect": "^1.13.4",
