--- a/package.json
+++ b/package.json
@@ -36,16 +36,16 @@
     "test:lint": "eslint"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.14",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "24.10.1",
     "@types/react": "19.2.6",
     "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.49.0",
-    "@typescript-eslint/parser": "^8.49.0",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
     "@vercel/analytics": "^1.6.1",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.7.0",
     "clsx": "^2.1.1",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -58,29 +58,29 @@
     "react-resizable-panels": "^3.0.6",
     "react-tooltip": "^5.30.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.49.0",
-    "vite": "^7.2.7",
+    "typescript-eslint": "^8.51.0",
+    "vite": "^7.3.0",
     "vitest": "^3.2.4"
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
     "@codemirror/autocomplete": "^6.20.0",
-    "@codemirror/commands": "^6.10.0",
+    "@codemirror/commands": "^6.10.1",
     "@codemirror/lang-javascript": "^6.2.4",
-    "@codemirror/language": "^6.11.3",
+    "@codemirror/language": "^6.12.1",
     "@codemirror/language-data": "^6.5.2",
     "@codemirror/lint": "^6.9.2",
-    "@codemirror/state": "^6.5.2",
-    "@codemirror/view": "^6.39.4",
+    "@codemirror/state": "^6.5.3",
+    "@codemirror/view": "^6.39.8",
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/spline-sans-mono": "^5.2.8",
     "@lezer/highlight": "^1.2.3",
     "@lezer/javascript": "^1.5.4",
     "@observablehq/notebook-kit": "^1.5.0",
     "@observablehq/runtime": "^6.0.0",
-    "@uiw/codemirror-theme-github": "^4.25.3",
+    "@uiw/codemirror-theme-github": "^4.25.4",
     "acorn": "^8.15.0",
     "acorn-walk": "^8.3.4",
     "cheerio": "^1.1.2",
@@ -88,16 +88,16 @@
     "d3-array": "^3.2.4",
     "d3-dispatch": "^3.0.1",
     "d3-require": "^1.3.0",
-    "eslint-linter-browserify": "^9.39.1",
+    "eslint-linter-browserify": "^9.39.2",
     "friendly-words": "^1.3.1",
-    "jotai": "^2.10.3",
+    "jotai": "^2.16.1",
     "nanoid": "^5.1.6",
-    "next": "15.5.9",
+    "next": "^15.5.9",
     "nstr": "^0.1.3",
     "object-inspect": "^1.13.4",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "shiki": "^3.19.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "shiki": "^3.20.0",
     "short-uuid": "^5.2.0",
     "source-map-support": "^0.5.21",
     "table": "^6.9.0"
